--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,3 +18,7 @@ spring.sql.init.mode=always
 spring.flyway.enabled=true 
 spring.flyway.locations=classpath:db/migration 
 spring.flyway.baseline-on-migrate=true
+
+spring.mvc.format-date-time=yyyy-MM-dd HH:mm:ss
+spring.mvc.throw-exception-if-no-handler-found=true
+
