--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,3 +22,7 @@ spring.flyway.baseline-on-migrate=true
 spring.mvc.format-date-time=yyyy-MM-dd HH:mm:ss
 spring.mvc.throw-exception-if-no-handler-found=true
 
+logging.level.org.springframework=DEBUG
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+
